Added backround color, title and a website logo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unit Project Website</title>
+    <title>Test Image</title>
+    <style>
+        header, footer {
+            background-color: black;
+            color: white;
+            text-align: center;
+        }
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        img {
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    </style>
 </head>
 <body>
-    
+    <header>
+    <h1>Lebron's Life and Achievements</h1>
+    <img src="images/Screenshot 2025-10-06 144010.png" alt="Website logo" width="180 px" height="180 px">
+    </header>
 </body>
 </html>
