--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Test Image</title>
     <style>
         header, nav, footer {
-          background-color: black;
+          background-color: rgb(0, 0, 0);
           color: white;
         }
         header, footer {
@@ -43,7 +43,7 @@
 </head>
 <body>
     <header>
-      <img src="images/Screenshot 2025-10-06 144010.png" alt="Website logo" width="180 px" height="180 px">
+      <img src="images/1-94aacb26.jpg" alt="Website logo" width="180 px" height="180 px">
       <h1>Lebron's Life and Achievements</h1>
     </header>
     <nav>
@@ -54,7 +54,20 @@
       </ul>
     </nav>
     <main>
-      <h3>How it all started</h3>
+      <
+
     </main>
+    <footer style="position: fixed; bottom: 0">
+    <!--
+      &#169; is an example of an HTML enitity. Entities are used to display special characters that 
+      are not on a typical English keyboard or symbols that are reserved for specail purposes in 
+      HTML (for example, <, >, etc.).
+
+      You can use entitiy names, like &copy; which would display the copyright symbol. however, 
+      not all browsers recognize entity names, so using entity numbers, like &#169; which displays
+      the copyright symbol, is safer.
+    -->
+      <p>&#169;2025 - David Leke-Atere</p>
+  </footer>
 </body>
 </html>
