changed my file name and added some paragraphs

--- a/index.html
+++ b/index.html
@@ -44,17 +44,32 @@
 <body>
     <header>
       <img src="images/1-94aacb26.jpg" alt="Website logo" width="180 px" height="180 px">
-      <h1>Lebron's Life and Achievements</h1>
+      <h1>The Lakers creation and Achievements</h1>
     </header>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="biography.html">Biography</a></li>
+        <li><a href="creation.html">Creation</a></li>
         <li><a href="achievments.html">Achievements</a></li>
       </ul>
     </nav>
     <main>
-      <
+      <h2>Welcome to the Los Angeles Lakers fan page</h2>
+      <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Los_Angeles_Lakers_logo.svg/1200px-Los_Angeles_Lakers_logo.svg.png" alt="Los Angeles Lakers logo" height="300 px" width="400 px">
+      <p>This page is dedicated to the Los Angeles Lakers, one of the most successful and popular teams in the NBA. Here, you will find information about the team's creation and its numerous achievements over the years.</p>
+      <h3>Team Creation</h3>
+        <ul>
+          <li>Date founded</li>
+          <li>Originally based somewhere else</li>
+          <li>Why and when did they move to LA</li>
+        </ul>
+
+      <h3>Team Achievements</h3>
+      <ul>
+        <li>NBA Championships</li>
+        <li>Conference Titles</li>
+        <li>Hall of Fame Players</li>
+      </ul>
 
     </main>
     <footer style="position: fixed; bottom: 0">
