paragraphs and images

--- a/creation.html
+++ b/creation.html
@@ -29,23 +29,29 @@
     </style>
 </head>
 <body>
-    </head>
-<body>
+    
+
     <header>
       <img src="images/1-94aacb26.jpg" alt="Website logo" width="180 px" height="180 px">
       <h1>The Lakers creation and Achievements</h1>
-    </header>
-    <nav>
+      </header>
+      <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="biography.html">Creation</a></li>
-        <li><a href="achievments.html">Achievements</a></li>
+        <li><a href="creation.html">Creation</a></li>
+        <li><a href="achievements.html">Achievements</a></li>
       </ul>
     </nav> 
-    </header>
     <main>
       <h2>Creation of the Los Angeles Lakers</h2>
-      <p>The Los Angeles Lakers were founded in 1947 in Minneapolis, Minnesota. The team was originally known as the Minneapolis Lakers, named after the state's nickname, "Land of 10,000 Lakes." The Lakers were one of the dominant teams in the early years of the NBA, winning several championships before relocating to Los Angeles in 1960.</p>
+      <p>The Los Angeles Lakers were founded in 1947 in Minneapolis, Minnesota.</p>
+      <p>The team was Originally known as the Minneapolis Lakers, named after the state's nickname, "Land of 10,000 Lakes."</p>
+      <p>Lakers were one of the dominant teams in the early years of the NBA, winning several championships before relocating to Los Angeles in 1960.</p>
       <p>Since moving to Los Angeles, the Lakers have become one of the most successful and popular franchises in the NBA, attracting top talent and winning numerous championships. The team's iconic purple and gold colors, along with their star-studded roster over the years, have made them a beloved team among basketball fans worldwide.</p>
-      <iframe width="560 px" height="315 px" src=""
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/JV6u3K1gt_A?si=fGBRTfqJfWUiXevI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </main>
+    <footer>
+      <p>&#169;2025 - David Leke-Atere</p>
+    </footer>
+</body>
 </html>
