paragraphs and images

--- a/creation.html
+++ b/creation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Creation of the Los Angeles Lakers</title>
     <style>
         header, footer {
           text-align: center;
@@ -49,6 +49,27 @@
       <p>Lakers were one of the dominant teams in the early years of the NBA, winning several championships before relocating to Los Angeles in 1960.</p>
       <p>Since moving to Los Angeles, the Lakers have become one of the most successful and popular franchises in the NBA, attracting top talent and winning numerous championships. The team's iconic purple and gold colors, along with their star-studded roster over the years, have made them a beloved team among basketball fans worldwide.</p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/JV6u3K1gt_A?si=fGBRTfqJfWUiXevI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <p>Overall, the creation of the Los Angeles Lakers marked the beginning of a storied franchise that has left an indelible mark on the history of professional basketball.</p>
+      <p>For more information, visit the <a href="https://en.wikipedia.org/wiki/Los_Angeles_Lakers">Wikipedia page</a>.</p>
+      <h2>The First Owners</h2>
+      <p>The original owners of the Lakers were Ben Berger and Morris Chalfen, who were also the owners of the Minneapolis Lakers.</p>
+      <p>In 1960, the team was sold to Jack Kent Cooke, who moved the franchise to Los Angeles.</p>
+      <p>Under Cooke's ownership, the Lakers continued to thrive, attracting star players and winning championships.</p>
+      <p>But the owner who influenced the Lakers to this day was Jerry Buss.</p>
+      <p>In 1979, Buss purchased the Lakers and transformed the team into a global brand.</p>
+      <p>He was known for his innovative marketing strategies and his ability to attract top talent to the team.</p>
+      <p>Under Buss's ownership, the Lakers won multiple championships and became one of the most successful franchises in NBA history.</p>
+      <p>After Buss's passing in 2013, his family took over ownership of the team, with his daughter Jeanie Buss serving as the team's president and controlling owner.</p>
+      <p>The Buss family continues to uphold Jerry Buss's legacy and commitment to excellence, ensuring that the Lakers remain a dominant force in the NBA.</p>
+      <br>
+      <img src="https://tse4.mm.bing.net/th/id/OIP.y4flWcWwR1OcKt28095roQHaEf?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3" alt="The First Owners" width="315" height="315">
+      <p>For more information, visit the <a href="https://en.wikipedia.org/wiki/Los_Angeles_Lakers#Ownership">Wikipedia page</a>.</p>
+      <table>
+        <tr>
+          <th>Ben Berger, Morris Chalfen</th>
+        </tr>
+      </table>
+      
     </main>
     <footer>
       <p>&#169;2025 - David Leke-Atere</p>
