--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="creation.html">Creation</a></li>
-        <li><a href="achievments.html">Achievements</a></li>
+        <li><a href="achievements.html">Achievements</a></li>
+        <li><a href="Fan test.html">Fan test</a></li>
       </ul>
     </nav>
     <main>
@@ -70,6 +71,13 @@
         <li>Conference Titles</li>
         <li>Hall of Fame Players</li>
       </ul>
+
+      <h3>Fan Test</h3>
+      <ul>
+        <li>Test your knowledge about the Lakers</li>
+        <li>Fun facts about the team</li>
+        <li>Interactive quizzes</li>
+      </ul><br><br><br><br>
 
     </main>
     <footer style="position: fixed; bottom: 0">
