changed the header and fixed spacing

--- a/achievements.html
+++ b/achievements.html
@@ -1,72 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>The Lakers Achievements</title>
 </head>
 <body>
+
+  <!-- Header -->
   <header>
     <h1>The Lakers Achievements</h1>
   </header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="creation.html">Creation</a></li>
-        <li><a href="achievements.html">Achievements</a></li>
-        <li><a href="Fan test.html">Fan test</a></li>
+
+  <!-- Navigation -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="creation.html">Creation</a></li>
+      <li><a href="achievements.html">Achievements</a></li>
+      <li><a href="Fan test.html">Fan Test</a></li> <!-- Avoid spaces in file names -->
     </ul>
-    </nav>
+  </nav>
+
+  <!-- Main Content -->
+  <main>
+    <img 
+      src="https://th.bing.com/th/id/R.61f16952ae00c59a1f0057a2326c623e?rik=KUzfrzKqYtk7pQ&pid=ImgRaw&r=0" 
+      alt="Los Angeles Lakers logo" 
+      width="400" 
+      height="300" 
+      loading="lazy"
+    >
+
     <section>
-  <h2>Lakers Trophies & Major Achievements</h2>
-  <section>
-  <h2>Lakers Trophies & Major Achievements</h2>
-  <ul>
-    <li>
-      <strong>1 × NBL Championship (1948)</strong><br>
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0tkyTNf7bbSLMR6S996I1LJ39yVWDAKgrJA&s" alt="NBL Trophy" width="100">
-    </li>
+      <h2>Lakers Trophies &amp; Major Achievements</h2>
+      <ul>
+        <li>
+          <strong>1 × NBL Championship (1948)</strong><br />
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0tkyTNf7bbSLMR6S996I1LJ39yVWDAKgrJA&s" alt="NBL Trophy" width="100" loading="lazy" />
+        </li>
 
-    <li>
-      <strong>1 × BAA Championship (1949)</strong><br>
-      <img src="https://rea-image-archive.nyc3.cdn.digitaloceanspaces.com/2014/spring/1946-1947-philadelphia-warriors-bba-champions-team-signed-trophy-basketball-extraordinary-first-nba-ball.jpg" alt="BAA Trophy" width="100">
-    </li>
+        <li>
+          <strong>1 × BAA Championship (1949)</strong><br />
+          <img src="https://rea-image-archive.nyc3.cdn.digitaloceanspaces.com/2014/spring/1946-1947-philadelphia-warriors-bba-champions-team-signed-trophy-basketball-extraordinary-first-nba-ball.jpg" alt="BAA Trophy" width="100" loading="lazy" />
+        </li>
 
-    <li>
-      <strong>17 × NBA Championships</strong><br>
-      <p>Years: 1950, 1952, 1953, 1954, 1972, 1980, 1982, 1985, 1987, 1988, 2000, 2001, 2002, 2009, 2010, 2020</p>
-      <img src="https://images.foxtv.com/static.fox5dc.com/www.fox5dc.com/content/uploads/2022/05/932/524/trophy1.jpg?ve=1&tl=1" alt="NBA Trophy" width="100">
-    </li>
+        <li>
+          <strong>17 × NBA Championships</strong><br />
+          <p>Years: 1950, 1952, 1953, 1954, 1972, 1980, 1982, 1985, 1987, 1988, 2000, 2001, 2002, 2009, 2010, 2020</p>
+          <img src="https://images.foxtv.com/static.fox5dc.com/www.fox5dc.com/content/uploads/2022/05/932/524/trophy1.jpg?ve=1&tl=1" alt="NBA Trophy" width="100" loading="lazy" />
+        </li>
 
-    <li>
-      <strong>1 × McDonald’s Championship (1991)</strong><br>
-      <img src="mcdonalds.jpg" alt="McDonald's Championship Trophy" width="100">
-    </li>
+        <li>
+          <strong>1 × McDonald’s Championship (1991)</strong><br />
+          <img src="mcdonalds.jpg" alt="McDonald's Championship Trophy" width="100" loading="lazy" />
+        </li>
 
-    <li>
-      <strong>1 × NBA In-Season Tournament (NBA Cup) (2023)</strong><br>
-      <img src="https://static01.nyt.com/images/2024/06/18/multimedia/18xp-lakers-kzvc/18xp-lakers-kzvc-articleLarge.jpg?quality=75&auto=webp&disable=upscale" alt="NBA Cup" width="200">
-    </li>
+        <li>
+          <strong>1 × NBA In-Season Tournament (NBA Cup) (2023)</strong><br />
+          <img src="https://static01.nyt.com/images/2024/06/18/multimedia/18xp-lakers-kzvc/18xp-lakers-kzvc-articleLarge.jpg?quality=75&auto=webp&disable=upscale" alt="NBA Cup" width="200" loading="lazy" />
+        </li>
 
-    <li>
-      <strong>1 × World Professional Basketball Tournament (1948)</strong><br>
-      <img src="https://p.globalsources.com/IMAGES/PDT/B1202890333/Basketball-Trophies.png" alt="World Pro Trophy" width="200">
-    </li>
+        <li>
+          <strong>1 × World Professional Basketball Tournament (1948)</strong><br />
+          <img src="https://p.globalsources.com/IMAGES/PDT/B1202890333/Basketball-Trophies.png" alt="World Pro Trophy" width="200" loading="lazy" />
+        </li>
 
-    <li>
-      <strong>Numerous Division & Conference Titles</strong><br>
-      <p>Includes Western Conference Championships and Pacific Division titles.</p>
-      <img src="https://ca-times.brightspotcdn.com/dims4/default/2db3b20/2147483647/strip/false/crop/6000x4000+0+0/resize/1486x991!/quality/75/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Fbe%2Fab%2F8ce77f8649c887d0b034dd63efb0%2Fnuggets-lakers-basketball-53646.jpg" alt="Division Titles" width="300">
-    </li>
+        <li>
+          <strong>Numerous Division &amp; Conference Titles</strong><br />
+          <p>Includes Western Conference Championships and Pacific Division titles.</p>
+          <img src="https://ca-times.brightspotcdn.com/dims4/default/2db3b20/2147483647/strip/false/crop/6000x4000+0+0/resize/1486x991!/quality/75/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Fbe%2Fab%2F8ce77f8649c887d0b034dd63efb0%2Fnuggets-lakers-basketball-53646.jpg" alt="Division Titles" width="300" loading="lazy" />
+        </li>
 
-    <li>
-      <strong>Dozens of Individual Awards</strong><br>
-      <p>MVPs, Finals MVPs, All-Star selections, and Hall of Fame inductees.</p>
-      <img src="https://cloudfront-us-east-1.images.arcpublishing.com/advancelocal/KZKUSSWZSNGIHC732KLSMLAMK4.jpg" alt="Individual Awards" width="100">
-    </li>
-  </ul>
-</section>
-</section>
+        <li>
+          <strong>Dozens of Individual Awards</strong><br />
+          <p>MVPs, Finals MVPs, All-Star selections, and Hall of Fame inductees.</p>
+          <img src="https://cloudfront-us-east-1.images.arcpublishing.com/advancelocal/KZKUSSWZSNGIHC732KLSMLAMK4.jpg" alt="Individual Awards" width="100" loading="lazy" />
+        </li>
+      </ul>
+    </section>
+  </main>
 
 </body>
 </html>
