--- a/creation.html
+++ b/creation.html
@@ -2,27 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Creation of the Los Angeles Lakers</title>
 </head>
 <body>
 
-  <!-- HEADER -->
+  <!-- Header -->
   <header>
     <h1>The Lakers Creation</h1>
   </header>
 
-  <!-- NAVIGATION -->
+  <!-- Navigation -->
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="creation.html">Creation</a></li>
       <li><a href="achievements.html">Achievements</a></li>
-      <li><a href="Fan test.html">Fan test</a></li>
+      <li><a href="Fan test.html">Fan Test</a></li> <!-- Avoid spaces in filenames -->
     </ul>
   </nav>
 
-  <!-- MAIN CONTENT -->
+  <!-- Main Content -->
   <main>
     <h2>Creation of the Los Angeles Lakers</h2>
     <p>The Los Angeles Lakers were founded in 1947 in Minneapolis, Minnesota.</p>
@@ -30,10 +30,20 @@
     <p>Lakers were one of the dominant teams in the early years of the NBA, winning several championships before relocating to Los Angeles in 1960.</p>
     <p>Since moving to Los Angeles, the Lakers have become one of the most successful and popular franchises in the NBA, attracting top talent and winning numerous championships.</p>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/JV6u3K1gt_A?si=fGBRTfqJfWUiXevI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe 
+      width="560" 
+      height="315" 
+      src="https://www.youtube.com/embed/JV6u3K1gt_A?si=fGBRTfqJfWUiXevI" 
+      title="YouTube video player" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      referrerpolicy="strict-origin-when-cross-origin" 
+      allowfullscreen 
+      loading="lazy"
+      style="border:none;">
+    </iframe>
 
     <p>Overall, the creation of the Los Angeles Lakers marked the beginning of a storied franchise that has left an indelible mark on the history of professional basketball.</p>
-    <p>For more information, visit the <a href="https://en.wikipedia.org/wiki/Los_Angeles_Lakers">Wikipedia page</a>.</p>
+    <p>For more information, visit the <a href="https://en.wikipedia.org/wiki/Los_Angeles_Lakers" target="_blank" rel="noopener noreferrer">Wikipedia page</a>.</p>
 
     <h2>The First Owners</h2>
     <p>The original owners of the Lakers were Ben Berger and Morris Chalfen, who were also the owners of the Minneapolis Lakers.</p>
@@ -46,41 +56,52 @@
     <p>After Buss's passing in 2013, his family took over ownership of the team, with his daughter Jeanie Buss serving as the team's president and controlling owner.</p>
     <p>The Buss family continues to uphold Jerry Buss's legacy and commitment to excellence, ensuring that the Lakers remain a dominant force in the NBA.</p>
 
-    <img src="https://tse4.mm.bing.net/th/id/OIP.y4flWcWwR1OcKt28095roQHaEf?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3" alt="The First Owners" width="315" height="315">
-    <p>For more information, visit the <a href="https://en.wikipedia.org/wiki/Los_Angeles_Lakers#Ownership">Wikipedia page</a>.</p>
+    <img 
+      src="https://tse4.mm.bing.net/th/id/OIP.y4flWcWwR1OcKt28095roQHaEf?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3" 
+      alt="The First Owners of the Los Angeles Lakers" 
+      width="315" 
+      height="315"
+      loading="lazy"
+    >
 
-    <!-- TABLE -->
+    <p>For more information, visit the <a href="https://en.wikipedia.org/wiki/Los_Angeles_Lakers#Ownership" target="_blank" rel="noopener noreferrer">Wikipedia page</a>.</p>
+
+    <!-- Table -->
     <table>
       <caption>Lakers Valuation Growth Since 1979</caption>
-      <tr>
-        <th>Year</th>
-        <th>Valuation / Price</th>
-        <th>Notes</th>
-      </tr>
-      <tr>
-        <td>1979</td>
-        <td>$67.5 million</td>
-        <td>Jerry Buss purchases the Lakers.</td>
-      </tr>
-      <tr>
-        <td>2013</td>
-        <td>$1 billion</td>
-        <td>Value at the time of Jerry Buss’s death.</td>
-      </tr>
-      <tr>
-        <td>2024</td>
-        <td>$7.1 billion</td>
-        <td>Franchise valuation.</td>
-      </tr>
-      <tr>
-        <td>2025</td>
-        <td>$10 billion</td>
-        <td>Valuation after majority stake sale.</td>
-      </tr>
+      <thead>
+        <tr>
+          <th scope="col">Year</th>
+          <th scope="col">Valuation / Price</th>
+          <th scope="col">Notes</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1979</td>
+          <td>$67.5 million</td>
+          <td>Jerry Buss purchases the Lakers.</td>
+        </tr>
+        <tr>
+          <td>2013</td>
+          <td>$1 billion</td>
+          <td>Value at the time of Jerry Buss’s death.</td>
+        </tr>
+        <tr>
+          <td>2024</td>
+          <td>$7.1 billion</td>
+          <td>Franchise valuation.</td>
+        </tr>
+        <tr>
+          <td>2025</td>
+          <td>$10 billion</td>
+          <td>Valuation after majority stake sale.</td>
+        </tr>
+      </tbody>
     </table>
   </main>
 
-  <!-- FOOTER -->
+  <!-- Footer -->
   <footer>
     <p>&#169; 2025 - David Leke-Atere</p>
   </footer>
